Bottom margin removing to correct overflow

--- a/neu/webdev/public/assignment/css/styles.css
+++ b/neu/webdev/public/assignment/css/styles.css
@@ -55,7 +55,6 @@ body {
     top: 0px;
     right: 0px;
     bottom: 0px;
-    margin-bottom: 50px;
     margin-top: 50px;
     padding-top: 15px;
     padding-left: 30px;
